2007-02-18  Ryan Lortie  <desrt@desrt.ca>

	* src/dh-window.[ch]: Add command to focus search field.
	* src/dh-main.c: Add --focus-search command line option and bacon
	  command (closes bug #409182).

2007-04-17  Richard Hult  <richard@imendio.com>

	* Apply patch from Huang Peng to add typeahead searching to the
	content area, fixes bug #116322.

2007-04-17  Richard Hult  <richard@imendio.com>

	* README: Update information about where books should be installed
	and the required version of the library we use. Fixes bug #411748.

2007-04-17  Richard Hult  <richard@imendio.com>

	* src/dh-window.c: Patch from Mariano Suárez-Alvarez to add
	missing mnemonics, bug #411376.

2007-04-17  Richard Hult  <richard@imendio.com>

	* devhelp.desktop.in.in: Patch from Kamil Páral to fix bug
	#417613, GNOME Goal #3: Remove "Application" category from
	.desktop files.

2007-04-17  Richard Hult  <richard@imendio.com>

	* configure.in: Bump version on trunk after branching.

2007-04-17  Richard Hult  <richard@imendio.com>
	
	* configure.in: Prepare for branching.

2007-03-13  Runa Bhattacharjee <runabh@gmail.com>

	* configure.in: Added Bengali India (bn_IN) to ALL_LINGUAS.

2007-03-10  Ihar Hrachyshka <iharh@gnome.org>

	* configure.in: Added be@latin to ALL_LINGUAS.

2007-03-07  Gintautas Miliauskas  <gintas@akl.lt>

	* configure.in: Added 'lt' (Lithuanian) to ALL_LINGUAS.

2007-02-14  Richard Hult  <richard@imendio.com>

	* m4/gecko.m4: Update from epiphany to fix bug #405384.

	* configure.in: Bump version.

2007-02-11  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Added 'th' (Thai) to ALL_LINGUAS.

2007-02-06  Pema Geyleg   <pema.geyleg@gmail.com>

	* configure.in: added dz to ALL_Linguas 

2007-02-02  Richard Hult  <richard@imendio.com>

	* Release 0.13.

2007-02-02  Naba Kumar  <naba@gnome.org>

	* libdevhelp-1.0.pc.in: Added gecko_home variable, addresses bug
	#341170.

2007-01-30  Priit Laes  <plaes@svn.gnome.org>
