@@ -1,3 +1,12 @@
+2007-04-17  Richard Hult  <richard@imendio.com>
+
+	* Makefile.am:
+	* configure.in:
+	* data/
+	* data/dtd/:
+	* data/ui/: Clean up a bit now that we can move things around
+	nicely with svn.
+
 2007-02-18  Ryan Lortie  <desrt@desrt.ca>
 
 	* src/dh-window.[ch]: Add command to focus search field.
